Complete the previous commit

--- a/guidelines/1.4.1.md
+++ b/guidelines/1.4.1.md
@@ -8,33 +8,46 @@ This document is in beta. Help us by [reporting issues via Github](https://githu
 
 Do not use colour as the only way to convey any piece of information.
 
-For example, don't just colour alone to:
+For example, don't use colour alone to:
 
-- to identify form fields with invalid entries;
-- to identify the current step in a step indicator;
-- to distinguish between areas of a map;
-- to distinguish between lines on a graph.
+- identify form fields with invalid entries;
+- distinguish between lines on a graph;
+- identify the current step in a step indicator;
+- distinguish between areas of a map.
 
 ---
 
 On this page:
 
 - [Requirements](#requirements)
+- [Common mistakes](#common-mistakes)
 - [Guidance for Design](#guidance-for-design)
-- [Guidance for Web](#guidance-for-web)
+- [Guidance for Code](#guidance-for-web)
 - [More info](#more-info)
 
 ---
 
 ## Requirements
 
-- Colour alone is not used to convey information (e.g. to identify form fields with invalid entries or the current step in a step indicator) or to distinguish between areas of a map or graph. Additional visual cues are used to provide the same information (e.g. icons, shapes, patterns, text).
+### General requirement
 
-  - Text identified by colour as having special meaning has another indicator - a visible border and label, underline or other visual effect.
-  - Information graphics and charts that use colour as a key also provide distinctive non-colour differences - hatching patterns or directly applied labels.
+- Colour alone must not used as the only way to communicate a piece of information. Additional visual cues must be used used to provide the same information (like icons, shapes, patterns, text, ...).
 
-- All links within blocks of text are underlined, and no other content on the page is underlined.
-  - If links cannot be underlined and are identified via colour alone, the contrast ratio between their colour and the colour of the surrounding text is at least 3:1, and their visual appearance changes (e.g. they become underlined) when they are hovered by the mouse pointer and receive [keyboard focus](./definitions.md#keyboard-focus).
+### How this applies to infographics
+
+- Information graphics and charts that use colour as a key also provide distinctive non-colour differences (like hatching patterns or directly applied labels).
+
+### How this applies to links in a paragraph of text
+
+- Links in a paragraph of text must not be indicated by colour alone. They must be indicated by another visual indicator as well (like an underline or an icon).
+
+  - Ideally that other visual indicator is present all the time, not just when users hover the link with their mouse. (Because touchscreen users don't use a mouse).
+  - If that's not possible, this is less usable and accessible but still meets the guidelines:
+
+    - Make sure the contrast ratio between the colour of the link and the colour of the surrounding text is at least 3:1;
+    - And add another visual indicator (for example an underline) when they are hovered by the mouse and receive [keyboard focus](./definitions.md#keyboard-focus).
+
+  - If you use underlines to communicate the presence of links, make sure that no other text on the page is underlined.
 
 ### Why?
 
@@ -48,6 +61,35 @@ On this page:
 > [**1.4.1 Use of Color:**](https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-without-color.html) Color is not used as the only visual means of conveying information, indicating an action, prompting a response, or distinguishing a visual element. (Level A)
 
 See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-without-color.html) with techniques and examples.
+
+---
+
+## Common mistakes
+
+- Using colour alone to indicate that the user forgot to fill in a text input, or tick a box.
+
+<figure>
+  <figcaption>
+    I'm asked to tick the checkboxes in red. Nothing apart from colour indicates which checkbox I should tick.
+  </figcaption>
+
+  <img src="../assets/141 failure - patchwork checkbox.jpg" alt="">
+</figure>
+
+<figure>
+  <figcaption>
+    If I have protonopia (a form a colour deficiency), the 'red' checkboxes look grey to me, and it's hard to know which ones are the 'red' checkboxes.
+  </figcaption>
+
+  <img src="../assets/141 failure - patchwork checkbox - protonopia.jpg" alt="">
+</figure>
+
+- Using colour alone to indicate that the user didn't fill in text input correctly.
+
+- A form uses only colour to indicate a required field.
+- Colour-coding text or backgrounds to indicate essential content, pass/fail categorisation, etc.
+- Links are only distinguished from plain text by colour and the colour may not vary from the main body text.
+- Text alternatives that do not include information conveyed by colour differences in the original image.
 
 ---
 
@@ -77,14 +119,6 @@ Additional visual and non-visual methods of identifying information or meaning m
   - suitable ['Accessible Names'](./definitions.md#accessibility-name) for elements;
   - ...
 
-### Common mistakes
-
-- A form uses only colour to indicate a required field.
-- Colour-coding text or backgrounds to indicate essential content, pass/fail categorisation, etc.
-- Links are only distinguished from plain text by colour and the colour may not vary from the main body text.
-- Text alternatives that do not include information conveyed by colour differences in the original image.
-- The error state of a input field is only identified by changing the colour of its border.
-
 ### How to style links
 
 - It's best for all links within blocks of text to be underlined, and no other content on the page to be underlined.
@@ -96,10 +130,11 @@ Additional visual and non-visual methods of identifying information or meaning m
 
 - [Understanding Colour Blindness](https://webaim.org/articles/visual/colorblind)
 - [Inclusive Design Tips: Presenting Information in Multiple Ways](https://www.deque.com/blog/inclusive-design-tips-presenting-information-multiple-ways/) by Deque
+- [Sim Daltonism app on the macOS App Store](https://apps.apple.com/us/app/sim-daltonism/id693112260?mt=12)
 
 ---
 
-## Guidance for Web
+## Guidance for Code
 
 - [Article on underlining links and using `:hover` and `:focus`](https://webaim.org/techniques/hypertext/link_text#underlining) by WebAIM
 
