[141] Add images width

--- a/guidelines/1.4.1.md
+++ b/guidelines/1.4.1.md
@@ -73,7 +73,7 @@ See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UND
     I'm asked to tick the checkboxes in red. Nothing apart from colour indicates which checkbox I should tick.
   </figcaption>
 
-  <img src="../assets/141 failure - patchwork checkbox.jpg" alt="">
+  <img src="../assets/141 failure - patchwork checkbox.jpg" width="320" alt="">
 </figure>
 
 <figure>
@@ -81,7 +81,7 @@ See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UND
     If I have protonopia (a form a colour deficiency), the 'red' checkboxes look grey to me, and it's hard to know which ones are the 'red' checkboxes.
   </figcaption>
 
-  <img src="../assets/141 failure - patchwork checkbox - protonopia.jpg" alt="">
+  <img src="../assets/141 failure - patchwork checkbox - protonopia.jpg" width="320" alt="">
 </figure>
 
 - Using colour alone to indicate that the user didn't fill in text input correctly.
