--- a/guidelines/1.4.3.md
+++ b/guidelines/1.4.3.md
@@ -20,10 +20,9 @@ On this page:
 
 ## Requirements
 
-- 'Large scale' text has a contrast ratio of at least 3:1 against its background.
-- Text that is not 'large scale' has a contrast ratio of at least 4.5:1 against its background.
-
-['Large scale' text](https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html#larger-scaledef) is defined as text that is larger than 18pt/24px, or 14pt/18.5px and bold.
+- 'Large scale' text must have a contrast ratio of at least 3:1 against its background.
+- Text that is not 'large scale' must a contrast ratio of at least 4.5:1 against its background.
+- ['Large scale' text](https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html#larger-scaledef) is text that is at least 24px, or 18.5px and bold.
 
 ### Why?
 
@@ -39,6 +38,8 @@ On this page:
 > - **Logotypes**: Text that is part of a logo or brand name has no minimum contrast requirement.
 
 See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UNDERSTANDING-WCAG20/content-structure-separation-programmatic.html) with techniques and examples.
+
+Note: In the guidelines, '[Large-scale text](https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html#larger-scaledef)' is defined using CSS pt as a unit. But [1 CSS pt is 1.33333 CSS px](https://www.w3.org/TR/css-values-3/#absolute-lengths) (both units represent absolute lengths, not linked to the size of a physical pixel on a particular device). So 18pt = 24px.
 
 ---
 
