[143] Clarify guidance; Add QA guidance

--- a/guidelines/1.4.3.md
+++ b/guidelines/1.4.3.md
@@ -14,6 +14,7 @@ On this page:
 
 - [Requirements](#requirements)
 - [Guidance for Design](#guidance-for-design)
+- [Guidance for Quality Assurance](#guidance-for-quality-assurance)
 - [More info](#more-info)
 
 ---
@@ -52,6 +53,36 @@ User tools like Sketch's Stark plug-in, [Colour Contrast Analyser](https://devel
 - [Colour contrast - why does it matter?](https://accessibility.blog.gov.uk/2016/06/17/colour-contrast-why-does-it-matter/) on the Government Digital Service
 
 ---
+
+## Guidance for Quality Assurance
+
+### How to check whether two colour values have enough contrast
+
+Use [WebAIM's Contrast Checker](https://webaim.org/resources/contrastchecker/).
+
+### How to automatically check whether all the text currently shown on a web page has enough contrast
+
+Use [Deque Systems' Axe extension for Firefox](https://addons.mozilla.org/en-GB/firefox/addon/axe-devtools/) or [Chrome](https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd), or [Microsoft's Accessibility Insights extension for Chrome](https://chrome.google.com/webstore/detail/accessibility-insights-fo/pbjjkligggfmakdaogkfomddhfmpjeni?hl=en).
+
+### How to manually check whether a piece of text on a web page has enough contrast
+
+1. Visit the web page using Firefox
+2. Right click on the text that you want to inspect.
+3. Select 'Inspect element'
+4. A new panel should appear on the right side of the web browser window. At the bottom left of that window, you can see all the CSS style rules that apply to the text element you're inspecting.
+5. At the top of that list of style rules, click on 'Filter styles' and type 'color'.
+
+<img src="../assets/143 - how to check - step 1.jpg" width="500" alt="">
+
+6. In the filtered list, find the CSS style rule called 'color'.
+
+- If there are several, pick the one that's closest to the top of the list.
+
+7. Click on the small circle that shows a preview of the colour.
+8. At the bottom of the panel that opens, you should see something like: 'Contrast' followed by a contrast ratio number.
+9. If the contrast ratio is high enough given the size of the text, you'll also see 'AA&check;'.
+
+<img src="../assets/143 - how to check - step 2.jpg" width="500" alt="">
 
 ## More info
 
