[143] Fix QA steps list

--- a/guidelines/1.4.3.md
+++ b/guidelines/1.4.3.md
@@ -66,23 +66,44 @@ Use [Deque Systems' Axe extension for Firefox](https://addons.mozilla.org/en-GB/
 
 ### How to manually check whether a piece of text on a web page has enough contrast
 
-1. Visit the web page using Firefox
-2. Right click on the text that you want to inspect.
-3. Select 'Inspect element'
-4. A new panel should appear on the right side of the web browser window. At the bottom left of that window, you can see all the CSS style rules that apply to the text element you're inspecting.
-5. At the top of that list of style rules, click on 'Filter styles' and type 'color'.
+Follow these steps:
 
-<img src="../assets/143 - how to check - step 1.jpg" width="360" alt="">
-
-6. In the filtered list, find the CSS style rule called 'color'.
-
-- If there are several, pick the one that's closest to the top of the list.
-
-7. Click on the small circle that shows a preview of the colour.
-8. At the bottom of the panel that opens, you should see something like: 'Contrast' followed by a contrast ratio number.
-9. If the contrast ratio is high enough given the size of the text, you'll also see 'AA&check;'.
-
-<img src="../assets/143 - how to check - step 2.jpg" width="360" alt="">
+<ol>
+    <li>
+        Visit the web page using Firefox.
+    </li>
+    <li>
+        Right click on the text that you want to inspect.
+    </li>
+    <li>
+        Select 'Inspect element'.
+    </li>
+    <li>
+        A new panel should appear on the right side of the web browser window. At the bottom left of that window, you can see all the CSS style rules that apply to the text element you're inspecting.
+    </li>
+    <li>
+        At the top of that list of style rules, click on 'Filter styles' and type 'color'. <br>
+        <img src="../assets/143 - how to check - step 1.jpg" width="360" alt="">
+    </li>
+    <li>
+        In the filtered list, find the CSS style rule called 'color'.
+        <ul>
+            <li>
+                If there are several, pick the one that's closest to the top of the list.
+            </li>
+        </ul>
+    </li>
+    <li>
+        Click on the small circle that shows a preview of the colour.
+    </li>
+    <li>
+        At the bottom of the panel that opens, you should see something like: 'Contrast' followed by a contrast ratio number.
+    </li>
+    <li>
+        If the contrast ratio is high enough given the size of the text, you'll also see 'AA&check;' or 'AAA&check;'. <br>
+        <img src="../assets/143 - how to check - step 2.jpg" width="360" alt="">
+    </li>
+</ol>
 
 ## More info
 
