[1410] Clarify summary. Add QA steps

--- a/guidelines/1.4.10.md
+++ b/guidelines/1.4.10.md
@@ -2,9 +2,9 @@ This document is in beta. Help us by [reporting issues via Github](https://githu
 
 [Back to the overview page](./../index.html)
 
-# Reflow
+# Reflow (also known as 'Responsive Web Design')
 
-## On a 1280px screen at 400% zoom, make sure people can access all of your site's content and functionalities without needing to scroll in two directions.
+## People can access the page’s content and functionality without needing to scroll horizontally ...<br />- at 100% zoom in a window that's 320px wide,<br />- and zoomed up to 400% in a window that's 1280px wide.
 
 On 320px-wide devices, or when users change the page's font size to 400%, there should be no loss of information or functionality, and users should not be required to scroll content both vertically and horizontally.
 
@@ -13,7 +13,8 @@ On 320px-wide devices, or when users change the page's font size to 400%, there 
 On this page:
 
 - [Requirements](#requirements)
-- [Guidance for Web](#guidance-for-web)
+- [Guidance for Code](#guidance-for-code)
+- [Guidance for Code](#guidance-for-quality-insurance)
 - [More info](#more-info)
 
 ---
@@ -24,16 +25,93 @@ On this page:
 - A simple browser based test is to view the page with a viewport width of 320px, or 1280px at 400% zoom.
   - You can zoom in on a Mac in Chrome by pressing Command and + key, until you see the resolution hit 400%.
 
-#### Common mistakes
+### Why?
+
+- People who are sight impaired often use screen magnification to resize page content and this can cause info to get lost.
+- Scrolling can often be difficult for some disabled users, more so when horizontally or both horizontally and vertically at the same time.
+
+---
+
+## Common mistakes
 
 - Content does not reflow to a single column when zoomed.
 - Horizontal scrolling appears in both directions at some low resolutions when content is zoomed.
 - Using fixed sized containers and fixed position content.
 
-### Why?
+---
 
-- People who are sight impaired often use screen magnification to resize page content and this can cause info to get lost.
-- Scrolling can often be difficult for some disabled users, more so when horizontally or both horizontally and vertically at the same time.
+## Guidance for Code
+
+See the [W3C's detailed explanation of this guideline](https://www.w3.org/WAI/WCAG21/Understanding/reflow.html) with techniques and examples.
+
+### Displaying code
+
+The use of &lt;code&gt;&lt;pre&gt; formatted content (such as code) can cause horizontal scrolling. Using the CSS declarations such as word-wrap: break-word; on &lt;code&gt;&lt;pre&gt; in small viewports will help to avoid horizontal scrolling at all.
+
+---
+
+## Guidance for Quality Insurance
+
+### 1. Checking at 100% zoom in a 320px wide window
+
+<ol>
+  <li>
+    Visit the page using Google Chrome
+  </li>
+  <li>
+    Make sure that your zoom level is 100%. You can use Ctrl +/- on Windows and Cmd +/- on macOS to change the zoom level.
+  </li>
+  <li>
+    Open the developer tools by right clicking anywhere on the page and selecting 'Inspect element'
+  </li>
+  <li>
+    Make the developer tool window bigger, so that the web page window is just 320px wide.
+    <img src="../assets/1410 - how to check - 320px test.jpg" width="800" alt="">
+    <ul>
+      <li>
+        Assuming that the developer tool window is on the right hand side of the web page content:
+      </li>
+      <li>
+        Place your mouse on the separation between the web page and the developer tool window. (If your mouse cursor is in the right place, it will show left and right arrows).
+      </li>
+      <li>
+        While you resize the developer tool window, you should see the dimensions of the web page window update, on the top right corner of the web page window.
+      </li>
+    </ul>
+  </li>
+  <li>
+    Check that you can see all of the web page's content without needing to scroll left and right.
+  </li>
+</ol>
+
+### 2. Checking at 400% zoom level in a 1280px wide window
+
+### Follow the same steps as above, but this time:
+
+<ul>
+  <li>
+    Resize the developer tool window so that the web page window is 1280px wide.
+  </li>
+  <li>
+    Increase the web page's zoom level to 400%.
+  </li>
+</ul>
+<img src="../assets/1410 - how to check - 1280px test.jpg" width="800" alt="">
+
+### If your screen is not wide enough to do that, you can do this instead:
+
+<ul>
+  <li>
+    Resize the developer tool window so that the web page window is 640px wide.
+  </li>
+  <li>
+    Increase the web page's zoom level to 200%.
+  </li>
+</ul>
+
+---
+
+## More info
 
 ### Official wording in the Web Content Accessibility Guidelines
 
@@ -49,20 +127,6 @@ On this page:
 > Examples of content which requires two-dimensional layout are images, maps, diagrams, video, games, presentations, data tables, and interfaces where it is necessary to keep toolbars in view while manipulating content.
 
 See the [W3C's detailed explanation of this guideline](https://www.w3.org/WAI/WCAG21/Understanding/reflow.html) with techniques and examples.
-
----
-
-## Guidance for Web
-
-See the [W3C's detailed explanation of this guideline](https://www.w3.org/WAI/WCAG21/Understanding/reflow.html) with techniques and examples.
-
-### Displaying code
-
-The use of &lt;code&gt;&lt;pre&gt; formatted content (such as code) can cause horizontal scrolling. Using the CSS declarations such as word-wrap: break-word; on &lt;code&gt;&lt;pre&gt; in small viewports will help to avoid horizontal scrolling at all.
-
----
-
-## More info
 
 ### Sources
 
