--- a/guidelines/1.4.10.md
+++ b/guidelines/1.4.10.md
@@ -4,9 +4,7 @@ This document is in beta. Help us by [reporting issues via Github](https://githu
 
 # Reflow (also known as 'Responsive Web Design')
 
-## People can access the page’s content and functionality without needing to scroll horizontally ...<br />- at 100% zoom in a window that's 320px wide,<br />- and zoomed up to 400% in a window that's 1280px wide.
-
-On 320px-wide devices, or when users change the page's font size to 400%, there should be no loss of information or functionality, and users should not be required to scroll content both vertically and horizontally.
+## People can access the page’s content and functionality without needing to scroll horizontally:<br />- at 100% zoom in a window that's 320px wide,<br />- zoomed up to 400% in a window that's 1280px wide.
 
 ---
 
@@ -14,39 +12,63 @@ On this page:
 
 - [Requirements](#requirements)
 - [Guidance for Code](#guidance-for-code)
-- [Guidance for Code](#guidance-for-quality-insurance)
+- [Guidance for Design](#guidance-for-design)
+- [Guidance for Quality Assurance](#guidance-for-quality-insurance)
 - [More info](#more-info)
 
 ---
 
 ## Requirements
 
-- Make sure your pages are responsive and the content will ‘reflow’ to a single column gracefully.
-- A simple browser based test is to view the page with a viewport width of 320px, or 1280px at 400% zoom.
-  - You can zoom in on a Mac in Chrome by pressing Command and + key, until you see the resolution hit 400%.
+- There should be no loss of information or functionality, and users should not need to scroll content both vertically and horizontally, when:
+
+  - they're viewing the page on a 320px-wide screen with the default zoom level (100%),
+  - they're viewing the page in a 1280px-wide browser window at any zoom level up to 400%.
+
+### Example: Kooth's landing page
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_BqmNdCx1M0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### Why?
 
-- People who are sight impaired often use screen magnification to resize page content and this can cause info to get lost.
-- Scrolling can often be difficult for some disabled users, more so when horizontally or both horizontally and vertically at the same time.
+- Needing to scroll in the direction of reading in order to reveal lines that are cut off makes reading difficult.
+- If content is hidden off screen in both the vertical and horizontal directly, it's more likely people will miss it.
 
 ---
 
 ## Common mistakes
 
 - Content does not reflow to a single column when zoomed.
-- Horizontal scrolling appears in both directions at some low resolutions when content is zoomed.
-- Using fixed sized containers and fixed position content.
+- Scrolling bars appears both horizontally and vertically when content is zoomed.
 
 ---
 
 ## Guidance for Code
 
-See the [W3C's detailed explanation of this guideline](https://www.w3.org/WAI/WCAG21/Understanding/reflow.html) with techniques and examples.
+This is about using Responsive Web Design techniques, such as:
+
+- Media queries
+- Flexbox / CSS grid
+- Relative width containers and letting content reflow when it can't fit horizontally within the viewport.
 
 ### Displaying code
 
 The use of &lt;code&gt;&lt;pre&gt; formatted content (such as code) can cause horizontal scrolling. Using the CSS declarations such as word-wrap: break-word; on &lt;code&gt;&lt;pre&gt; in small viewports will help to avoid horizontal scrolling at all.
+
+### More guidance for code
+
+See the [W3C's detailed explanation of this guideline](https://www.w3.org/WAI/WCAG21/Understanding/reflow.html) with techniques and examples.
+
+---
+
+## Guidance for Design
+
+- Design 'Mobile first': design the layout for narrow screens first.
+  - This forces you to decide how all of the page's elements fit in one column.
+- Make sure that your layout works on a 320px screen (like an iPhone 5, or the original iPhone SE), not just on a wider mobile device.
+  - This same layout is what users will see ...
+    - On a 640px screen when the browser's zoom is set to 200%
+    - On a 1280px screen when the browser's zoom is set to 400%
 
 ---
 
