[1410] Add tech note and success and failure examples

--- a/guidelines/1.4.10.md
+++ b/guidelines/1.4.10.md
@@ -25,7 +25,7 @@ On this page:
   - they're viewing the page on a 320px-wide screen with the default zoom level (100%),
   - they're viewing the page in a 1280px-wide browser window at any zoom level up to 400%.
 
-### Example: Kooth's landing page
+### Success example: Kooth's landing page
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_BqmNdCx1M0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -34,12 +34,63 @@ On this page:
 - Needing to scroll in the direction of reading in order to reveal lines that are cut off makes reading difficult.
 - If content is hidden off screen in both the vertical and horizontal directly, it's more likely people will miss it.
 
+### How does this work?
+
+[1 CSS pixel is defined as 1/92th of an inch at 100% zoom](https://www.w3.org/TR/css-values-3/#absolute-lengths).
+(Note: A CSS pixel is an absolute, fixed length unit. It's not related to the size of a physical pixel).
+
+Increasing the browser's zoom level changes the size of 1 CSS pixel.
+For example, at 400% zoom, 1 CSS pixel is 1/23th of an inch, rather than 1/92th.
+
 ---
 
 ## Common mistakes
 
-- Content does not reflow to a single column when zoomed.
-- Scrolling bars appears both horizontally and vertically when content is zoomed.
+### Content does not reflow to a single column when zoomed.
+
+### Scrolling bars appears both horizontally and vertically when content is zoomed.
+
+### Giving an element a fixed width that's larger than 320px
+
+If you give an element a fixed width that's larger than 320px:
+
+- it won't fit on a 320px-wide screen,
+- it won't fit within a 1280px-wide window at 400% zoom.
+
+#### Failure example: Reddit 'cookies policy' dialog
+
+Here's a video:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yM8Yle_NI48" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<figure>
+  <figcaption>
+    The 'cookies policy' modal at the bottom of the screen has a fixed width of 700 CSS px.<br />
+On a 1280px-wide window at the default (100%) zoom level, the whole banner appears on screen:
+  </figcaption>
+  <img src="../assets/1410 failure - reddit 100pc zoom.jpg" width="800" alt="">
+</figure>
+
+<figure>
+  <figcaption>
+      As we increase the browser zoom level, the modal is still 700 CSS pixels, but 1 CSS pixel becomes wider. So the modal takes up more horizontal space:
+  </figcaption>
+  <img src="../assets/1410 failure - reddit 175pc zoom.jpg" width="800" alt="">
+</figure>
+
+<figure>
+  <figcaption>
+    As soon as we reach 200% zoom, the modal doesn't fit horizontally on screen:
+  </figcaption>
+  <img src="../assets/1410 failure - reddit 200pc zoom.jpg" width="800" alt="">
+</figure>
+
+<figure>
+  <figcaption>
+    At 400% zoom, the modal is completely unusable. It's not possible to read what it says, and the button is completely off screen:
+  </figcaption>
+  <img src="../assets/1410 failure - reddit 400pc zoom.jpg" width="800" alt="">
+</figure>
 
 ---
 
