[1410] Test styles to avoid video iframe overflow

--- a/guidelines/1.4.10.md
+++ b/guidelines/1.4.10.md
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="../styles.css" />
+
 This document is in beta. Help us by [reporting issues via Github](https://github.com/jfhector/accessibility-guidelines) or [email](mailto:jeanfrancois.hector@googlemail.com).
 
 [Back to the overview page](./../index.html)
@@ -27,7 +29,9 @@ On this page:
 
 ### Success example: Kooth's landing page
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_BqmNdCx1M0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video_container">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/_BqmNdCx1M0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 ### Why?
 
@@ -66,21 +70,21 @@ Here's a video:
 <figure>
   <figcaption>
     The 'cookies policy' modal at the bottom of the screen has a fixed width of 700 CSS px.<br />
-On a 1280px-wide window at the default (100%) zoom level, the whole banner appears on screen:
+On a 1280px-wide window at the default (100%) zoom level, the whole banner fits on screen:
   </figcaption>
   <img src="../assets/1410 failure - reddit 100pc zoom.jpg" width="800" alt="">
 </figure>
 
 <figure>
   <figcaption>
-      As we increase the browser zoom level, the modal is still 700 CSS pixels, but 1 CSS pixel becomes wider. So the modal takes up more horizontal space:
+      As we increase the browser zoom level, the modal is still 700 CSS pixels wide, but 1 CSS pixel becomes wider. So the modal takes up more horizontal space:
   </figcaption>
   <img src="../assets/1410 failure - reddit 175pc zoom.jpg" width="800" alt="">
 </figure>
 
 <figure>
   <figcaption>
-    As soon as we reach 200% zoom, the modal doesn't fit horizontally on screen:
+    As soon as we reach 200% zoom, the modal doesn't fit horizontally on screen any more:
   </figcaption>
   <img src="../assets/1410 failure - reddit 200pc zoom.jpg" width="800" alt="">
 </figure>
@@ -98,9 +102,9 @@ On a 1280px-wide window at the default (100%) zoom level, the whole banner appea
 
 This is about using Responsive Web Design techniques, such as:
 
-- Media queries
-- Flexbox / CSS grid
-- Relative width containers and letting content reflow when it can't fit horizontally within the viewport.
+- Media queries;
+- Flexbox / CSS grid to let elements change their width or reflow onto several lines based on the width of the viewport;
+- Giving containers a width that's relative to the width of the viewport (using `%` or `vh` for example).containers and letting content reflow when it can't fit horizontally within the viewport.
 
 ### Displaying code
 
