[1410] Add meta tag for device width; Swap in newer version of the reddit video

--- a/guidelines/1.4.10.md
+++ b/guidelines/1.4.10.md
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../styles.css" />
 
 This document is in beta. Help us by [reporting issues via Github](https://github.com/jfhector/accessibility-guidelines) or [email](mailto:jeanfrancois.hector@googlemail.com).
@@ -63,9 +64,13 @@ If you give an element a fixed width that's larger than 320px:
 
 #### Failure example: Reddit 'cookies policy' dialog
 
-Here's a video:
+##### The example shown in a video:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/yM8Yle_NI48" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video_container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5PWB2BBjpKU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+##### The same example shown in pictures:
 
 <figure>
   <figcaption>
@@ -79,21 +84,21 @@ On a 1280px-wide window at the default (100%) zoom level, the whole banner fits 
   <figcaption>
       As we increase the browser zoom level, the modal is still 700 CSS pixels wide, but 1 CSS pixel becomes wider. So the modal takes up more horizontal space:
   </figcaption>
-  <img src="../assets/1410 failure - reddit 175pc zoom.jpg" width="800" alt="">
+  <img loading="lazy" src="../assets/1410 failure - reddit 175pc zoom.jpg" width="800" alt="">
 </figure>
 
 <figure>
   <figcaption>
     As soon as we reach 200% zoom, the modal doesn't fit horizontally on screen any more:
   </figcaption>
-  <img src="../assets/1410 failure - reddit 200pc zoom.jpg" width="800" alt="">
+  <img loading="lazy" src="../assets/1410 failure - reddit 200pc zoom.jpg" width="800" alt="">
 </figure>
 
 <figure>
   <figcaption>
     At 400% zoom, the modal is completely unusable. It's not possible to read what it says, and the button is completely off screen:
   </figcaption>
-  <img src="../assets/1410 failure - reddit 400pc zoom.jpg" width="800" alt="">
+  <img loading="lazy" src="../assets/1410 failure - reddit 400pc zoom.jpg" width="800" alt="">
 </figure>
 
 ---
