--- a/guidelines/1.4.10.md
+++ b/guidelines/1.4.10.md
@@ -51,11 +51,11 @@ For example, at 400% zoom, 1 CSS pixel is 1/23th of an inch, rather than 1/92th.
 
 ## Common mistakes
 
-### Content does not reflow to a single column when zoomed.
+### Common mistake #1: Content does not reflow to a single column when zoomed.
 
-### Scrolling bars appears both horizontally and vertically when content is zoomed.
+### Common mistake #2: Scrolling bars appears both horizontally and vertically when using browser zoom.
 
-### Giving an element a fixed width that's larger than 320px
+### Common mistake #3: Giving an element a fixed width that's larger than 320px
 
 If you give an element a fixed width that's larger than 320px:
 
