[1411] Fix invalid HTML caption –> figcaption

--- a/guidelines/1.4.11.md
+++ b/guidelines/1.4.11.md
@@ -38,14 +38,14 @@ On this page:
 
 <figure>
   <img src="../assets/icon_1411_success.png" height="80">
-  <caption><div>It's clear that this icon represents Facebook, because the Facebook logo uses enough colour contrast.</div></caption>
+  <figcaption><div>It's clear that this icon represents Facebook, because the Facebook logo uses enough colour contrast.</div></figcaption>
 </figure>
 
 ##### Fail
 
 <figure>
   <img src="../assets/icon_1411_fail.png" height="80">
-  <caption><div>It's not visible enough that this icon represents Facebook, because the colour contrast between the green and the white is not sufficient.</div></caption>
+  <figcaption><div>It's not visible enough that this icon represents Facebook, because the colour contrast between the green and the white is not sufficient.</div></figcaption>
 </figure>
 
 ### For graphical objects (like icons, or parts of an infographics)
@@ -62,14 +62,14 @@ On this page:
 
 <figure>
   <img src="../assets/star_rating_1411_success.png" height="40">
-  <caption><div>The presence of the stars is indicated by their border, which is in black and has enough contrast with white.</div></caption>
+  <figcaption><div>The presence of the stars is indicated by their border, which is in black and has enough contrast with white.</div></figcaption>
 </figure>
 
 ###### Fail
 
 <figure>
   <img src="../assets/star_rating_1411_fail.png" height="40">
-  <caption><div>The presence of the stars is only indicated by their background colour, which doesn't have enough contrast with white.</div></caption>
+  <figcaption><div>The presence of the stars is only indicated by their background colour, which doesn't have enough contrast with white.</div></figcaption>
 </figure>
 
 ### Why?
