[211] Add video and tidy

--- a/guidelines/2.1.1.md
+++ b/guidelines/2.1.1.md
@@ -1,3 +1,6 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="../styles.css" />
+
 This document is in beta. Help us by [reporting issues via Github](https://github.com/jfhector/accessibility-guidelines) or [email](mailto:jeanfrancois.hector@googlemail.com).
 
 [Back to the overview page](./../index.html)
@@ -6,15 +9,14 @@ This document is in beta. Help us by [reporting issues via Github](https://githu
 
 ## Make sure every task can be completed using just the keyboard.
 
-It must be possible for someone using a keyboard to complete all tasks in a website or app. This ensures that people with mobility impairments who do not use a mouse can successfully complete their goals.
+It must be possible for someone using only a keyboard to access all content and complete all tasks.
 
 ---
 
 On this page:
 
 - [Requirements](#requirements)
-- [Guidance for Design](#guidance-for-design)
-- [Guidance for Web](#guidance-for-web)
+- [Guidance for code](#guidance-for-code)
 - [More info](#more-info)
 
 ---
@@ -35,6 +37,14 @@ On this page:
 
 - Making a website or app accessible with a keyboard also ensures that it is accessible with other input devices that emulate keyboards, like Switch devices or Sip-and-puff devices.
 
+### How does this work?
+
+See Rob Dodson explain 'Focus' in this short video:
+
+<div class="video_container">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/EFv9ubbZLKw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ### Official wording in the Web Content Accessibility Guidelines
 
 > [**2.1.1 Keyboard:**](https://www.w3.org/TR/UNDERSTANDING-WCAG20/keyboard-operation-keyboard-operable.html) All [functionality](https://www.w3.org/TR/UNDERSTANDING-WCAG20/keyboard-operation-keyboard-operable.html#functiondef) of the content is operable through a [keyboard interface](https://www.w3.org/TR/UNDERSTANDING-WCAG20/keyboard-operation-keyboard-operable.html#keybrd-interfacedef) without requiring specific timings for individual keystrokes, except where the underlying function requires input that depends on the path of the user's movement and not just the endpoints. (Level A)
@@ -47,13 +57,7 @@ See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UND
 
 ---
 
-## Guidance for Design
-
-See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UNDERSTANDING-WCAG20/keyboard-operation-keyboard-operable.html) with techniques and examples.
-
----
-
-## Guidance for Web
+## Guidance for code
 
 ### Native HTML interactive elements are keyboard accessible out of the box
 
@@ -63,11 +67,14 @@ See the [W3C's detailed explanation of this guideline](https://www.w3.org/TR/UND
 ### If you don't make use of HTML interactive elements, you need to implement keyboard accessibility yourself
 
 - If you create an interactive element yourself, make it focusable with the 'Tab' key with `tabindex="0"`. When this element is disabled set `tabindex="-1"` to remove it from the [tab order](./definitions.md#tab-order).
-- Also make sure that you implement responses to keyboard presses that users expect. Look at the keyboard support and focus management guidance in the [ARIA Authoring Practices Guide](https://www.w3.org/TR/wai-aria-practices-1.1/), which covers many common user interface design patterns.
+- Also make sure that you implement responses to keyboard presses that users expect.
 
-  One of the [Rules of ARIA](https://www.w3.org/TR/using-aria/#NOTES) is that:
+  - For example, people expect to be able to activate buttons using either 'Enter' or 'Space'.
+  - One of the [Rules of ARIA](https://www.w3.org/TR/using-aria/#NOTES) is:
 
   > "All interactive ARIA controls must be usable with the keyboard."
+
+  - The [ARIA Authoring Practices Guide](https://www.w3.org/TR/wai-aria-practices-1.1/) tells you what keyboard support you should implement for many common user interface design patterns.
 
 ### Hide hidden or off-screen elements for keyboard users and screen reader users too
 
